--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -94,7 +94,7 @@
             <p><strong>Modelo CNN:</strong></p>
             <p>Tempo de inferência: <span id="inference_time_cnn"></span> segundos</p>
             <br>
-            <p><strong>Modelo MLP:</strong></p>
+            <p><strong>Modelo linear:</strong></p>
             <p>Tempo de inferência: <span id="inference_time_mlp"></span> segundos</p>
         </div>
     </div>
